# minicraft-plus-plus

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt  automata.comp  config.hpp  database.cpp  database.hpp  e_mob.cpp  e_mob.hpp  e_player.cpp  e_player.hpp  entity.cpp  entity.hpp  level.cpp  level.hpp  main.cpp  render.frag  render.vert  renderer.cpp  renderer.hpp  shader.cpp  spritesheet.xcf
lib/fast_obj/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/: voxel.glsl
res/shaders/: model.frag  model.vert  text.frag  text.vert  voxel.glsl
shaders/: obj.frag  obj.glsl  obj.vert  voxel_model.glsl  voxel_model.vert
src/: app.cpp  database.cpp  database.hpp  dynamic_buffer.cpp  dynamic_buffer.hpp  main.cpp  render_util.cpp  render_util.hpp  renderer.cpp  renderer.hpp  renderer_util.cpp  renderer_util.hpp  util.hpp  voxel.cpp  voxel.hpp  voxel_model.cpp  voxel_model.hpp  window.cpp  window.hpp
src/render/: obj.cpp  obj.hpp  render.cpp  render.hpp  util.cpp  util.hpp
